<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="aa_albums">Albums</string>
    <string name="aa_artists">Artists</string>
    <string name="aa_by">by</string>
    <string name="aa_playlists">Playlists</string>
    <string name="aa_podcasts">Podcasts</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Spotifuck</string>
    <string name="app_version">v1.6.4 by deviato</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="copy">Copy</string>
    <string name="dlg_no">No</string>
    <string name="dlg_text">"All cookies will be deleted.
On service restarting you'll need to log in again.
Continue?"</string>
    <string name="dlg_title">Confirmation</string>
    <string name="dlg_yes">Yes</string>
    <string name="error_icon_content_description">Error</string>
    <string name="expand_button_title">Advanced</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="item_view_role_description">Tab</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_standard">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="material_timepicker_am">AM</string>
    <string name="material_timepicker_pm">PM</string>
    <string name="menu_actions">Triggered Actions</string>
    <string name="menu_amoled">Amoled Theme</string>
    <string name="menu_andauto">Controls + Android Auto</string>
    <string name="menu_ap_disabled">Disabled</string>
    <string name="menu_ap_mode">AutoPlay Mode</string>
    <string name="menu_ap_onetime">One time at start</string>
    <string name="menu_ap_permanent">Permanent</string>
    <string name="menu_as_10min">10 minutes</string>
    <string name="menu_as_15min">15 minutes</string>
    <string name="menu_as_1h">1 hour</string>
    <string name="menu_as_1h30m">1 hour 30 min</string>
    <string name="menu_as_20min">20 minutes</string>
    <string name="menu_as_2h">2 hours</string>
    <string name="menu_as_30min">30 minutes</string>
    <string name="menu_as_3h">3 hours</string>
    <string name="menu_as_45min">45 minutes</string>
    <string name="menu_as_disabled">Disabled</string>
    <string name="menu_autoshut">Auto Shutdown after inactivity</string>
    <string name="menu_autosleep">Playback Sleep timer</string>
    <string name="menu_btap">Play when Bluetooth is Connected</string>
    <string name="menu_btas">Stop when Bluetooth is Disconnected</string>
    <string name="menu_cat_gui">Appearance</string>
    <string name="menu_cat_player">Player Settings</string>
    <string name="menu_cat_system">System Settings</string>
    <string name="menu_clearcache">Empty Cache</string>
    <string name="menu_clearcachesum">Useful if you notice slowdowns in navigation</string>
    <string name="menu_cleardata">Empty Cache and Login Data</string>
    <string name="menu_cleardatasum">Clear all data and log out</string>
    <string name="menu_closenowplay">Always Close “Now Playing” View</string>
    <string name="menu_endtext">⚠️ Changes to the above options require manual service restart</string>
    <string name="menu_forceen">Force English Browser</string>
    <string name="menu_forceensum">Could be useful for banned countries</string>
    <string name="menu_forceportrait">Force portrait orientation</string>
    <string name="menu_gm_bigwindow">Wide Window</string>
    <string name="menu_gm_csshack">️Mobile CSS+JS</string>
    <string name="menu_gm_none">None</string>
    <string name="menu_guimode">GUI Hack Mode</string>
    <string name="menu_hpap">Play when Headphones are Plugged in</string>
    <string name="menu_hpas">Stop when Headphones are Unplugged</string>
    <string name="menu_swipestop">Stop service by swiping in recent apps list</string>
    <string name="menu_takecontrol">Take Player Control</string>
    <string name="mtrl_checkbox_button_icon_path_checked">M14,18.2 11.4,15.6 10,17 14,21 22,13 20.6,11.6z</string>
    <string name="mtrl_checkbox_button_icon_path_group_name">icon</string>
    <string name="mtrl_checkbox_button_icon_path_indeterminate">M13.4,15 11,15 11,17 13.4,17 21,17 21,15z</string>
    <string name="mtrl_checkbox_button_icon_path_name">icon path</string>
    <string name="mtrl_checkbox_button_path_checked">M23,7H9C7.9,7,7,7.9,7,9v14c0,1.1,0.9,2,2,2h14c1.1,0,2-0.9,2-2V9C25,7.9,24.1,7,23,7z</string>
    <string name="mtrl_checkbox_button_path_group_name">button</string>
    <string name="mtrl_checkbox_button_path_name">button path</string>
    <string name="mtrl_checkbox_button_path_unchecked">M23,7H9C7.9,7,7,7.9,7,9v14c0,1.1,0.9,2,2,2h14c1.1,0,2-0.9,2-2V9C25,7.9,24.1,7,23,7z M23,23H9V9h14V23z</string>
    <string name="mtrl_checkbox_state_description_checked">Checked</string>
    <string name="mtrl_checkbox_state_description_indeterminate">Partially checked</string>
    <string name="mtrl_checkbox_state_description_unchecked">Not checked</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_cancel">Cancel</string>
    <string name="mtrl_picker_confirm">OK</string>
    <string name="mtrl_picker_day_of_week_column_header">%1$s</string>
    <string name="mtrl_picker_navigate_to_current_year_description">Navigate to current year %1$d</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$d</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_toggle_to_calendar_input_mode">Switch to calendar input mode</string>
    <string name="mtrl_picker_toggle_to_day_selection">Tap to switch to Calendar view</string>
    <string name="mtrl_picker_toggle_to_text_input_mode">Switch to text input mode</string>
    <string name="mtrl_picker_toggle_to_year_selection">Tap to switch to year view</string>
    <string name="not_set">Not set</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="preference_copied">\"%1$s\" copied to clipboard.</string>
    <string name="search_menu_title">Search</string>
    <string name="searchbar_scrolling_view_behavior">com.google.android.material.search.SearchBar$ScrollingViewBehavior</string>
    <string name="searchview_clear_text_content_description">Clear text</string>
    <string name="searchview_navigation_content_description">Back</string>
    <string name="side_sheet_accessibility_pane_title">Side Sheet</string>
    <string name="srv_notif">You can disable this notification by long-pressing on it</string>
    <string name="srv_title">Playing in background</string>
    <string name="summary_collapsed_preference_list">%1$s, %2$s</string>
    <string name="txt_adblock">Blocking Ads</string>
    <string name="txt_closelib">Close Library</string>
    <string name="txt_loadingpage">Loading...</string>
    <string name="txt_loadprevious">Going Back...</string>
    <string name="txt_notloaded">Start the service first and wait for the player to load!</string>
    <string name="txt_pressagain">Press again to send in background</string>
    <string name="txt_reload">Reloading...</string>
    <string name="txt_servicenr">Service Not Running</string>
    <string name="txt_startservice">Start</string>
    <string name="txt_unlock">Player Unlocking</string>
    <string name="txt_waitplayer">...Wating for Player...</string>
    <string name="v7_preference_off">OFF</string>
    <string name="v7_preference_on">ON</string>
</resources>
