<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/main" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <it.deviato.spotifuck.LockableHScrollView android:id="@id/hScrollView" android:layout_width="fill_parent" android:layout_height="0.0dip" android:fillViewport="true" android:overScrollMode="never" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@id/topNav">
        <FrameLayout android:id="@id/webViewContainer" android:background="#ff33333f" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="24.0sp" android:textStyle="bold" android:textColor="#ff888888" android:gravity="center" android:id="@id/frameBgText" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/txt_servicenr" />
            <TextView android:textSize="14.0sp" android:textColor="#ffaaaaaa" android:gravity="center" android:layout_gravity="bottom" android:id="@id/frameStatusText" android:paddingBottom="5.0dip" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="WebView v. N/A" />
            <TextView android:textSize="15.0sp" android:textColor="#ff000000" android:layout_gravity="right|bottom" android:id="@id/txtMessage" android:background="@color/teal_200" android:paddingLeft="15.0dip" android:paddingTop="5.0dip" android:paddingRight="15.0dip" android:paddingBottom="5.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="174.0dip" android:text="@string/txt_loadprevious" />
        </FrameLayout>
    </it.deviato.spotifuck.LockableHScrollView>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/topNav" android:background="?colorPrimary" android:layout_width="fill_parent" android:layout_height="48.0dip" app:layout_constraintTop_toTopOf="parent">
        <TextView android:textSize="20.0dip" android:textStyle="bold" android:textColor="@color/white" android:id="@id/txtTitle" android:layout_width="wrap_content" android:layout_height="32.0dip" android:text="@string/app_name" android:layout_marginStart="15.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="15.0dip" android:textColor="@color/white" android:id="@id/swcLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/txt_startservice" android:layout_marginStart="30.0dip" android:labelFor="@id/swcStart" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@id/txtTitle" app:layout_constraintTop_toTopOf="parent" />
        <Switch android:textColor="@color/white" android:id="@id/swcStart" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="50.0dip" android:switchMinWidth="60.0dip" android:layout_marginStart="4.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@id/swcLabel" app:layout_constraintTop_toTopOf="parent" />
        <ProgressBar android:id="@id/progressBar" android:visibility="invisible" android:layout_width="24.0dip" android:layout_height="24.0dip" android:layout_marginLeft="15.0dip" android:indeterminate="true" android:indeterminateTint="@color/teal_200" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@id/swcStart" app:layout_constraintTop_toTopOf="parent" />
        <ImageButton android:id="@id/btnSettings" android:background="@android:color/transparent" android:layout_width="45.0dip" android:layout_height="45.0dip" android:src="@mipmap/spotifuck_round" android:scaleType="fitCenter" android:layout_marginEnd="20.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
